--- a/tsreact/index/index.html
+++ b/tsreact/index/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>Sample React with TypeScript Application</title>
-
-    <script src="main.js"></script>
+    <title>Sample React Application</title>
   </head>
   <body>
     <article id="main"/>
