react.ts Simplified support of language files generation.

--- a/tsreact/index/index.html
+++ b/tsreact/index/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Sample React Application</title>
+    <script defer = "defer" src = "lang/en.js"></script>
   </head>
   <body>
     <article id="main"/>
