--- a/index/index.html
+++ b/index/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="<%= htmlWebpackPlugin.options.defaultLang %>">
   <head>
     <meta charset="utf-8">
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sample React Application</title>
-    <script defer="defer" src="/lang/en.js"></script>
+    <script defer="defer" src="/lang/<%= htmlWebpackPlugin.options.defaultLang %>.js"></script>
   </head>
-  <body></body>
+  <body>
+    <article id="<%= htmlWebpackPlugin.options.reactRootId %>"></article>
+  </body>
 </html>
